# lucas

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
lucas/: check.py  checks.py  cli.py
tests/: test_checks.py  test_rules.py
tests/fixtures/: contratos.html  receitas.html  seadmin.html
